# fastbook

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
bench/: CMakeLists.txt  bench_hashmap.cpp  bench_order_book.cpp  bench_spsc.cpp  bench_utils.hpp
cmake/: CompilerOptions.cmake
data/: sample.itch
src/: CMakeLists.txt  main.cpp
src/bookbuilder/: CMakeLists.txt  book_builder.hpp
src/datasources/: CMakeLists.txt  file_source.hpp  udp_source.hpp
src/feed/: CMakeLists.txt  feed_handler.cpp  feed_handler.hpp  itch_messages.hpp
src/feedreader/: CMakeLists.txt  feed_reader.hpp
src/matching/: CMakeLists.txt  matching_engine.hpp
src/orderbook/: CMakeLists.txt  hash_map.hpp  order_book.hpp  slab_allocator.hpp
src/spsc/: CMakeLists.txt  spsc_queue.hpp
tests/: CMakeLists.txt  test_feed_handler.cpp  test_hashmap.cpp  test_matching_engine.cpp  test_order_book.cpp  test_spsc.cpp
